--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./styles/index.css">
-    <link rel="icon" type="image/png" href="public/scissors.png">
+    <link rel="icon" type="image/png" href="/scissors.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Link shrinker</title>
   </head>
@@ -13,8 +13,8 @@
       <h1>Link shrinker</h1>
         <nav id="navbar">
           <div id="first-links" class="">
-            <a href="./login.html">Log In</a>
-            <a href="./signup.html">Sign Up</a>
+            <a href="/login.html">Log In</a>
+            <a href="/signup.html">Sign Up</a>
           </div>
           <div id="logout" class="">Log Out</div>
         </nav>
