--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles/login.css">
-    <link rel="icon" type="image/png" href="public/scissors.png">
+    <link rel="icon" type="image/png" href="/scissors.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in</title>
 </head>
