--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./public/styles/index.css">
     <link rel="icon" type="image/png" href="/scissors.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Link shrinker</title>
@@ -40,9 +40,9 @@
       </table>
   </body>
   <script type="module">
-    import "./src/shrinkButton.js";
-    import "./src/navbarStyle.js";
-    import "./src/logout.js";
-    import './src/tableInfo.js';
+    import "./public/src/shrinkButton.js";
+    import "./public/src/navbarStyle.js";
+    import "./public/src/logout.js";
+    import './public/src/tableInfo.js';
   </script>
 </html>
