--- a/public/signup.html
+++ b/public/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../styles/signup.css">
+    <link rel="stylesheet" href="./styles/signup.css">
     <link rel="icon" type="image/png" href="/scissors.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
@@ -23,6 +23,6 @@
     </form>
 </body>
 <script type="module">
-    import "../src/signup.js";
+    import "./src/signup.js";
   </script>
 </html>
