--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <body>
+    <div id="loadingOverlay" class="hidden">
+      <div class="loading-content">
+        <p>Wait a moment...</p>
+      </div>
+  </div>
     <header id="header">
       <h1>Link shrinker</h1>
         <nav id="navbar">
