--- a/public/login.html
+++ b/public/login.html
@@ -8,6 +8,11 @@
     <title>Log in</title>
 </head>
 <body>
+    <div id="loadingOverlay" class="hidden">
+        <div class="loading-content">
+          <p>Wait a moment...</p>
+        </div>
+    </div>
     <h1>Log in</h1>
     <form action="" id="form">
         <label for="email">
