--- a/public/signup.html
+++ b/public/signup.html
@@ -8,6 +8,11 @@
     <title>Sign up</title>
 </head>
 <body>
+    <div id="loadingOverlay" class="hidden">
+        <div class="loading-content">
+          <p>Wait a moment...</p>
+        </div>
+    </div>
     <h1>Sign up</h1>
     <form action="" id="form">
         <label for="name">
