--- a/public/signup.html
+++ b/public/signup.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./styles/overlayStyles.css">
     <link rel="stylesheet" href="./styles/signup.css">
     <link rel="icon" type="image/png" href="/scissors.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
