--- a/public/login.html
+++ b/public/login.html
@@ -8,11 +8,7 @@
     <title>Log in</title>
 </head>
 <body>
-    <div id="loadingOverlay" class="hidden">
-        <div class="loading-content">
-          <p>Wait a moment...</p>
-        </div>
-    </div>
+
     <h1>Log in</h1>
     <form action="" id="form">
         <label for="email">
@@ -21,7 +17,7 @@
         <label for="password">
             <input type="password" name="password" id="password" placeholder="password">
         </label>
-        <button type="submit" id="login">Log in</button>
+        <button type="submit" id="login-button">Log in</button>
     </form>
 </body>
 <script type="module">
