--- a/public/signup.html
+++ b/public/signup.html
@@ -8,11 +8,6 @@
     <title>Sign up</title>
 </head>
 <body>
-    <div id="loadingOverlay" class="hidden">
-        <div class="loading-content">
-          <p>Wait a moment...</p>
-        </div>
-    </div>
     <h1>Sign up</h1>
     <form action="" id="form">
         <label for="name">
@@ -24,7 +19,7 @@
         <label for="password">
             <input type="password" name="password" id="password" placeholder="password">
         </label>
-        <button type="submit" id="signup">Sign up</button>
+        <button type="submit" id="signup-button">Sign up</button>
     </form>
 </body>
 <script type="module">
