--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="/signup.html">Sign Up</a>
           </div>
           <div id="logout" class="">Log Out</div>
+          <div id="delete-acount" class="">Delete Acount</div>
         </nav>
     </header>
     <main id="main">
@@ -45,5 +46,6 @@
     import "./public/src/navbarStyle.js";
     import "./public/src/logout.js";
     import './public/src/tableInfo.js';
+    import './public/src/deleteAccount.js';
   </script>
 </html>
