--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="/signup.html">Sign Up</a>
           </div>
           <div id="logout" class="">Log Out</div>
-          <div id="delete-acount" class="">Delete Acount</div>
+          <div id="delete-account" class="">Delete Acount</div>
         </nav>
     </header>
     <main id="main">
